--- a/Portfolio/Website/index.html
+++ b/Portfolio/Website/index.html
@@ -29,7 +29,7 @@
   <main id="home">
     <section id="about" class="panel">
       <h2>About</h2>
-      <p>Welcome to YourStudio — short blurb about your photography business, your style, and contact basics.</p>
+      <p>Sularis Photography</p>
     </section>
 
     <section id="portfolio" class="panel">
