--- a/Portfolio/Website/index.html
+++ b/Portfolio/Website/index.html
@@ -38,16 +38,28 @@
 
       <div class="gallery">
         <!-- Add your images to an "images/" folder inside your repo and update names -->
-        <a href="images/photo1.jpg" target="_blank" rel="noopener">
+        <a href="images/AisleCelebrate.jpg" target="_blank" rel="noopener">
           <img src="images/photo1.jpg" alt="Photo 1">
         </a>
-        <a href="images/photo2.jpg" target="_blank" rel="noopener">
+        <a href="images/EngagementChest.jpg" target="_blank" rel="noopener">
           <img src="images/photo2.jpg" alt="Photo 2">
         </a>
-        <a href="images/photo3.jpg" target="_blank" rel="noopener">
+        <a href="images/FunStuff.jpg" target="_blank" rel="noopener">
           <img src="images/photo3.jpg" alt="Photo 3">
         </a>
-        <a href="images/photo4.jpg" target="_blank" rel="noopener">
+        <a href="images/RenMeg.jpg" target="_blank" rel="noopener">
+          <img src="images/photo4.jpg" alt="Photo 4">
+        </a>
+        <a href="images/RockRings.jpg" target="_blank" rel="noopener">
+          <img src="images/photo4.jpg" alt="Photo 4">
+        </a>
+        <a href="images/TheBoys.jpg" target="_blank" rel="noopener">
+          <img src="images/photo4.jpg" alt="Photo 4">
+        </a>
+        <a href="images/Veil1.jpg" target="_blank" rel="noopener">
+          <img src="images/photo4.jpg" alt="Photo 4">
+        </a>
+        <a href="images/Veil2.jpg" target="_blank" rel="noopener">
           <img src="images/photo4.jpg" alt="Photo 4">
         </a>
         <!-- Duplicate the <a> block above for additional photos -->
