--- a/Portfolio/Website/index.html
+++ b/Portfolio/Website/index.html
@@ -36,33 +36,32 @@
       <h2>Portfolio</h2>
       <p>Click an image to open the full-size version in a new tab.</p>
 
+      <!-- Gallery: place inside your portfolio section -->
       <div class="gallery">
-        <!-- Add your images to an "images/" folder inside your repo and update names -->
         <a href="images/AisleCelebrate.jpg" target="_blank" rel="noopener">
-          <img src="images/AisleCelebrate.jpg" alt="Photo 1">
+          <img src="images/AisleCelebrate.jpg" alt="Aisle Celebrate">
         </a>
         <a href="images/EngagementChest.jpg" target="_blank" rel="noopener">
-          <img src="images/EngagementChest.jpg" alt="Photo 2">
+          <img src="images/EngagementChest.jpg" alt="Engagement Chest">
         </a>
         <a href="images/FunStuff.jpg" target="_blank" rel="noopener">
-          <img src="images/FunStuff.jpg" alt="Photo 3">
+          <img src="images/FunStuff.jpg" alt="Fun Stuff">
         </a>
         <a href="images/RenMeg.jpg" target="_blank" rel="noopener">
-          <img src="images/RenMeg.jpg" alt="Photo 4">
+          <img src="images/RenMeg.jpg" alt="Ren and Meg">
         </a>
         <a href="images/RockRings.jpg" target="_blank" rel="noopener">
-          <img src="images/RockRings.jpg" alt="Photo 4">
+          <img src="images/RockRings.jpg" alt="Rock Rings">
         </a>
         <a href="images/TheBoys.jpg" target="_blank" rel="noopener">
-          <img src="images/TheBoys.jpg" alt="Photo 4">
+          <img src="images/TheBoys.jpg" alt="The Boys">
         </a>
         <a href="images/Veil1.jpg" target="_blank" rel="noopener">
-          <img src="images/Vei1.jpg" alt="Photo 4">
+          <img src="images/Veil1.jpg" alt="Veil 1">
         </a>
         <a href="images/Veil2.jpg" target="_blank" rel="noopener">
-          <img src="images/Veil2.jpg" alt="Photo 4">
+          <img src="images/Veil2.jpg" alt="Veil 2">
         </a>
-        <!-- Duplicate the <a> block above for additional photos -->
       </div>
     </section>
 
