--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="brand">
-      <a href="#home">YourStudio</a>
+      <a href="#home">Sularis Photography</a>
     </div>
 
     <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,22 +68,36 @@
     <section id="services" class="panel">
       <h2>Services</h2>
       <ul>
-        <li>Portrait sessions</li>
+        <li>Weddings and Engagement</li>
         <li>Event photography</li>
-        <li>Commercial shoots</li>
+        <li>Graduations</li>
+        <li>Holiday (And non-Holiday) Family Photos</li>
       </ul>
     </section>
 
     <section id="pricing" class="panel">
       <h2>Pricing</h2>
-      <table class="pricing-table">
+      <table class="pricing-table-one">
         <thead>
-          <tr><th>Package</th><th>Includes</th><th>Price</th></tr>
+          <tr><th>Wedding Pricing</th><th>Details</th><th>Price</th></tr>
         </thead>
         <tbody>
-          <tr><td>Basic</td><td>1-hour shoot, 10 edits</td><td>$150</td></tr>
-          <tr><td>Standard</td><td>2-hour shoot, 25 edits</td><td>$300</td></tr>
-          <tr><td>Premium</td><td>Half-day, full edits, prints</td><td>$650</td></tr>
+          <tr><td>Minimum Package</td><td>4 hours, Single Photographer</td><td>$1500</td></tr>
+          <tr><td>Additional Hours</td><td>Price per additional Hour of Main Photographer</td><td>$150</td></tr>
+          <tr><td>Additional Photographer</td><td>4 Hour minimum</td><td>$500</td></tr>
+          <tr><td>Additional Hours</td><td>Price per additional Hour of Second Photographer</td><td>$50</td></tr>
+          <tr><td>Engagement shoot</td><td>Discount with Contract</td><td>$250</td></tr>
+        </tbody>
+      </table>
+      <table class="pricing-table-two">
+        <thead>
+          <tr><th>Additional Services</th><th>Includes</th><th>Price</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>Stand-Alone Engagement</td><td>1-hour shoot</td><td>$350</td></tr>
+          <tr><td>Graduation</td><td>1-hour shoot</td><td>$200</td></tr>
+          <tr><td>Family/Holiday Photos</td><td>30 minute shoot</td><td>$150</td></tr>
+          <tr><td>Other</td><td>Have a different event or specifications? Please reach out for a quote!</td><td>Varies</td></tr>
         </tbody>
       </table>
     </section>
