--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>&copy; <span id="year"></span> YourStudio — <a href="mailto:contact@yoursite.example">contact@yoursite.example</a></p>
+    <p>&copy; <span id="year"></span> Sularis Photography — <a href="mailto:sularisphotography@gmail.com">sularisphotography@gmail.com</a></p>
   </footer>
 
   <script src="script.js"></script>
