update index and style

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <section id="pricing" class="panel">
       <h2>Pricing</h2>
-      <table class="pricing-table-one">
+      <table class="pricing-table">
         <thead>
           <tr><th>Wedding Pricing</th><th>Details</th><th>Price</th></tr>
         </thead>
@@ -89,7 +89,7 @@
           <tr><td>Engagement shoot</td><td>Discount with Contract</td><td>$250</td></tr>
         </tbody>
       </table>
-      <table class="pricing-table-two">
+      <table class="pricing-table">
         <thead>
           <tr><th>Additional Services</th><th>Includes</th><th>Price</th></tr>
         </thead>
